# Newton-Stein-Variational-Particle-Filter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  roadmap.md
doc/: NEWTON_STEIN_ANALYSIS.md  SVPF_2D_PARAM_LEARNING_POSTMORTEM.md  SVPF_ADAPTIVE_METHODS.md  SVPF_IMPLEMENTATION_SUMMARY.md  SVPF_PAPER_VS_IMPLEMENTATION.md  SVPF_PMMH_ORACLE.md  svpf_cuda_optimizations.html  svpf_optimization_journey.html
doc/accuracy/html/: SVPF_OPTIMIZATION_REPORT.html  svpf_adaptive_methods_optimizations.html
doc/accuracy/md/: SVPF_ADAPTIVE_METHODS.md  diagnostics.md  svpf_optimization_summary.md
doc/latency/: performance_optimization.md
doc/oracle_integration/: AR1_IMPROVEMENTS_FOR_SVPF.md  SELF_TUNING_SVPF.md  SVPF_JOINT_PARAMETER_LEARNING.md  SVPF_PARAMETER_LEARNING.html  gradient_diagnostic_findings.md  nu_gradient_diagnostic_findings.md
doc/original_articles/: SVPF_IMPLEMENTATION_NOTES.md
include/: market_data_loader.h  svpf.cuh  svpf_config.h  svpf_diagnostics.h  svpf_fully_fused.cuh  svpf_fully_fused_v2.cuh  svpf_kernels.cuh  svpf_multiscale.cuh  svpf_persistent_kernel_v2.cuh  svpf_stein_parallel.cuh  svpf_test_framework.h  svpf_two_factor.cuh
market_data/: crashes_combined.csv  crashes_combined_returns.csv  iwm_full.csv  iwm_full_returns.csv  market_data_info.h  qqq_full.csv  qqq_full_returns.csv  spy_2008_crisis.csv  spy_2008_crisis_returns.csv  spy_2020_covid.csv  spy_2020_covid_returns.csv  spy_2022_rates.csv  spy_2022_rates_returns.csv  spy_full.csv  spy_full_returns.csv  tsla.csv  tsla_returns.csv  vix_full.csv  vix_full_returns.csv
py-torch/: CMakeLists.txt  diff_svpf_torch.py  setup.py  svpf_best_case_demo.ipynb  svpf_examples.py  svpf_finite_diff.py  svpf_python.cpp  svpf_validation.py  svpf_vs_mcmc.ipynb
py-torch/.ipynb_checkpoints/: svpf_best_case_demo-checkpoint.ipynb  svpf_vs_mcmc-checkpoint.ipynb
py-torch/examples/: svpf_examples.py
py-torch/verification/: svpf_finite_diff.py
scripts/: fetch_market_data.py  svpf_stress_Double_Spike_10sigma.csv  svpf_stress_Double_Spike_15sigma.csv  svpf_stress_Double_Spike_20sigma.csv  svpf_stress_Double_Spike_25sigma.csv  svpf_stress_Double_Spike_30sigma.csv  svpf_stress_Double_Spike_40sigma.csv  svpf_stress_Double_Spike_50sigma.csv  svpf_stress_Double_Spike_5sigma.csv  svpf_stress_Flash_Crash_10sigma.csv  svpf_stress_Flash_Crash_15sigma.csv  svpf_stress_Flash_Crash_20sigma.csv  svpf_stress_Flash_Crash_25sigma.csv  svpf_stress_Flash_Crash_30sigma.csv  svpf_stress_Flash_Crash_40sigma.csv  svpf_stress_Flash_Crash_50sigma.csv  svpf_stress_Flash_Crash_5sigma.csv  svpf_stress_Gradual_Build_10sigma.csv  svpf_stress_Gradual_Build_15sigma.csv  svpf_stress_Gradual_Build_20sigma.csv  svpf_stress_Gradual_Build_25sigma.csv  svpf_stress_Gradual_Build_30sigma.csv  svpf_stress_Gradual_Build_40sigma.csv  svpf_stress_Gradual_Build_50sigma.csv  svpf_stress_Gradual_Build_5sigma.csv  svpf_stress_Single_Spike_10sigma.csv  svpf_stress_Single_Spike_15sigma.csv  svpf_stress_Single_Spike_20sigma.csv  svpf_stress_Single_Spike_25sigma.csv  svpf_stress_Single_Spike_30sigma.csv  svpf_stress_Single_Spike_40sigma.csv  svpf_stress_Single_Spike_50sigma.csv  svpf_stress_Single_Spike_5sigma.csv  svpf_stress_Sustained_Chaos_10sigma.csv  svpf_stress_Sustained_Chaos_12sigma.csv  svpf_stress_Sustained_Chaos_15sigma.csv  svpf_stress_Sustained_Chaos_5sigma.csv  svpf_stress_Sustained_Chaos_7sigma.csv  svpf_stress_analysis.py  svpf_stress_summary.csv
src/: CMakeLists.txt  svpf_2d_kernels.cu  svpf_bandwidth_diagnostic.cu  svpf_diagnostics.cu  svpf_fast.cu  svpf_finite_diff.cu  svpf_fully_fused.cu  svpf_fully_fused_v2.cu  svpf_gradient_diagnostic.cu  svpf_joint_kernels_sketch.cu  svpf_kernels.cu  svpf_multi_sm.cu  svpf_opt_kernels.cu  svpf_optimized.cu  svpf_optimized_graph.cu  svpf_parallel_stein_summary.md  svpf_test_framework.cu  svpf_two_factor.cu
src/tools/: CMakeLists.txt  svpf_bandwidth_diagnostic.cu  svpf_gradient_diagnostic.cu  svpf_test_framework.cu
svpf_joint/: CMakeLists.txt
svpf_joint/include/: svpf_joint.cuh
svpf_joint/src/: CMakeLists.txt  svpf_joint.cu  svpf_joint_kernels.cu
svpf_joint/test/: CMakeLists.txt  test_svpf_joint.cu
test/: CMakeLists.txt  profile_multi_stream.cu  profile_svpf.cu  run_svpf_tests.cu  svpf_multiscale_test.cu  svpf_student_t_test.cu  svpf_test.cu  test_full_newton_parallel.cu  test_fully_fused.cu  test_fully_fused_v2.cu  test_fused_v2_scenario.cu  test_stein_parallel.cu  test_svpf_extreme.cu  test_svpf_gradient_dgp.cu  test_svpf_gradient_market.cu  test_svpf_gradient_sigma.cu  test_svpf_hcrbpf_dgp.cu  test_svpf_scenarios.cu  test_two_factor.cu
